JBPM-7241 - Fix mega menu layout on IE11

--- a/jbpm-wb-case-mgmt/jbpm-wb-case-mgmt-showcase/src/main/resources/org/jbpm/workbench/cm/public/css/showcase.css
+++ b/jbpm-wb-case-mgmt/jbpm-wb-case-mgmt-showcase/src/main/resources/org/jbpm/workbench/cm/public/css/showcase.css
@@ -35,3 +35,8 @@ ul.nav.navbar-nav.navbar-primary.persistent-secondary {
 #mega-menu img.uf-brand-icon {
     height: auto;
 }
+
+#mega-menu .navbar-pf .navbar-header {
+    height: 58px;
+    min-width: 200px;
+}
